Fixed position flicker

--- a/src/app/shared/component/element/element.component.scss
+++ b/src/app/shared/component/element/element.component.scss
@@ -6,10 +6,6 @@
 
   @include activeElement;
 
-  &.resize-ghost-element {
-    position: static !important;
-  }
-
   &.cdk-drag-dragging {
     cursor: grabbing;
   }
